Updated ro (new translator)

--- a/CustomRPC/About.ro.resx
+++ b/CustomRPC/About.ro.resx
@@ -124,6 +124,6 @@
     <value>Închide</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Despre</value>
+    <value>Despre Program</value>
   </data>
 </root>
