--- a/CustomRPC/MainForm.fr.resx
+++ b/CustomRPC/MainForm.fr.resx
@@ -468,4 +468,7 @@ Pour prendre effet, les deux champs doivent être supérieurs à 0.</value>
   <data name="faqToolStripMenuItem.Text" xml:space="preserve">
     <value>Question posées fréquement</value>
   </data>
+  <data name="newPresetToolStripMenuItem.Text" xml:space="preserve">
+    <value>Nouveau préréglage</value>
+  </data>
 </root>
