--- a/CustomRPC/Strings.de.resx
+++ b/CustomRPC/Strings.de.resx
@@ -145,7 +145,7 @@ Du kannst sie jederzeit öffnen, indem du auf Hilfe -&gt; Handbuch öffnen gehst
     <comment>`</comment>
   </data>
   <data name="statusConnectionFailed" xml:space="preserve">
-    <value>Verbindung fehlgeschlagen (Ist Discord gestartet?)</value>
+    <value>Verbindung fehlgeschlagen (Läuft Discord?)</value>
   </data>
   <data name="statusDisconnected" xml:space="preserve">
     <value>Getrennt</value>
@@ -195,5 +195,9 @@ Drücke "Ja", um sie zurückzusetzen oder "Nein", um das Programm zu beenden.</v
   </data>
   <data name="statusUpdatingPresence" xml:space="preserve">
     <value>Aktualisierung der Präsenz...</value>
+  </data>
+  <data name="newPresetConfirmation" xml:space="preserve">
+    <value>Bist du sicher, dass du noch einmal von vorne anfangen willst?
+Dies kann nicht rückgänig gemacht werden.</value>
   </data>
 </root>
